图标相关处理